# GenAI-Equity-Research-Command-Center

./: .env  .gitignore  README.md  app.py  auditor_swarm.py  docker-compose.yaml  expert_registry.py  litellm_config.yaml  mcp_finance_server.py  model_armor.py  page_index.py  process_document.py  pyproject.toml  report_generator.py  research_graph.py  test_routing.py  vault_manager.py
dags/: equity_ingestion_dag.py
